--- a/yduproj/src/main/webapp/WEB-INF/web.xml
+++ b/yduproj/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,7 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	<!-- 한글패치 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
